# LiveTermimal

./: .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  deck.py  docker-compose.yml  hand.py  main.py  opponent_hand.py
card_game_backend/: Cargo.toml  how the game works.md
card_game_backend/src/: deck.rs  main.rs
card_game_engine/: Cargo.toml
card_game_front_end/: Cargo.toml  index.html  output.css  package.json  tailwind.config.js  todos.md
card_game_front_end/src/: index.rs  main.rs  tailwind.css
card_game_front_end/src/components/: mod.rs  ps_1.rs
card_game_front_end/src/components/history/: history_component.rs  history_context_hook.rs  history_function.rs  hook.rs  input.rs  input.txt  interface.rs  keyboard_event_hanlder.rs  mod.rs  raw_html.rs  raw_html_with_children.rs
card_game_front_end/src/config/: config.rs
card_game_front_end/src/style/: input.css
card_game_front_end/src/utils/: api.rs  api_types.rs  command_exists.rs  mod.rs  shell.rs  tap_completion.rs
card_game_front_end/src/utils/commands/: api_commands.rs  command_exists.rs  commands_context_hook.rs  execute_command.rs  helper.rs  mod.rs  shell.rs  sumfetch.rs  tap_completion.rs
custom_script/: .gitignore  Cargo.toml  (+5 more)
front_end/: .gitignore  Cargo.toml  index.html  package.json  tailwind.config.js
front_end/src/: index.rs  main.rs
front_end/src/components/: ps_1.rs
front_end/src/components/history/: history_component.rs  history_context_hook.rs  history_function.rs  input.rs  interface.rs  raw_html.rs
front_end/src/config/: .zshrc  command_config.rs  config.json  config.rs  mod.rs
front_end/src/style/: input.css
front_end/src/utils/: api.rs  api_types.rs  mod.rs
front_end/src/utils/commands/: add_element.rs  api_commands.rs  command_exists.rs  commands_context_hook.rs  commands_string.rs  execute_command.rs  mod.rs  shell.rs  sumfetch.rs  tap_completion.rs
front_end/src/utils/commands/javascript/: index.js
front_end/src/utils/commands/programs/: echo.rs  help.rs  legacy.rs  mod.rs  open_repo.rs  programs.rs  welcome.rs
front_end/src/web_fs/: cred.rs  errors.rs  file.rs  file_system.rs  global_constants.rs  inode.rs  mod.rs  stat.rs  utils.rs  web_fs.rs
front_end/src/web_fs/backend/: backend.rs  mod.rs
front_end/src/web_fs/emulation/: constants.rs  mod.rs  shared.rs
front_end/src/web_fs/generic/: key_value_file_system.rs  mod.rs  preload_file.rs
(+5 files in other folders)
