[package]
name = "card_game_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deckofcards = "0.4"
common ={path="../common"}
actix-web = "^4"
actix-files = "0.6"
actix-web-lab = "^0"
aws-config = "^0.13"
aws-sdk-dynamodb = "^0.13"
env_logger = "0.9"
serde = { version = "^1", features = ["derive"] }
strum_macros = "^0.24"
strum = { version = "^0.24", features = ["derive"] }
log = "^0.4"
derive_more = "^0.99"