[package]
name = "card_game_front_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-dialogs = "0.1.1"
stdweb = "0.4.20"
web-sys = {version = "0.3.57", features=["HtmlInputElement"]}
gloo-console = "0.2.1"
# you can check the latest version here: https://crates.io/crates/yew
yew = "0.19"
serde_json = "1.0.66"
serde = "1.0.137"
chrono = "0.4"
reqwest = {version = "0.11.10", features=["json"]}

