[package]
name = "card_game_front_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-dialogs = "0.2.0"
web-sys = { version = "0.3.57", features = [
    "HtmlInputElement",
    "Element",
    "ScrollToOptions",
    "DateTimeValue",
    "Document",
    "Window",
] }
gloo-console = "0.3.0"
instant = { version = "0.1", features = ["wasm-bindgen", "inaccurate"] }
# you can check the latest version here: https://crates.io/crates/yew
yew = { version = "0.21", features = ["csr"] }
serde_json = "1.0.66"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
futures = "0.3"
wasm-bindgen-futures = "0.4.39"
reqwasm = "0.5"
regex = "1"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.89"
wasm-bindgen-test = "0.3.39"
byteorder = "1.5.0"

